added images to cc, fixing hover text cuboct truss

--- a/minor-projects/computational-cardiology/index.html
+++ b/minor-projects/computational-cardiology/index.html
@@ -21,9 +21,35 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 
 <br><br>
 
-<p>Please excuse my rudimentary video production skills at age 14.  While the video is a bit ridiculous, I think the explanation still stands.</p>
+<h3 style="text-align:center;">Algorithm Workflow</h3>
+
+<div class="content">
+    <img class="slides" src="/minor-projects/computational-cardiology/steps/step1.png" alt="Algorithm Step 1" style="width:100%">
+</div>
+<div class="content">
+    <img class="slides" src="/minor-projects/computational-cardiology/steps/step2.png" alt="Algorithm Step 2" style="width:100%">
+</div>
+<div class="content">
+    <img class="slides" src="/minor-projects/computational-cardiology/steps/step3.png" alt="Algorithm Step 3" style="width:100%">
+</div>
+<div class="content">
+    <img class="slides" src="/minor-projects/computational-cardiology/steps/step4.png" alt="Algorithm Step 4" style="width:100%">
+</div>
+<div class="content">
+    <img class="slides" src="/minor-projects/computational-cardiology/steps/step5.png" alt="Algorithm Step 5" style="width:100%">
+</div>
+<div class="content">
+    <img class="slides" src="/minor-projects/computational-cardiology/steps/step6.png" alt="Algorithm Step 6" style="width:100%">
+</div>
+<div class="content">
+    <img class="slides" src="/minor-projects/computational-cardiology/steps/filters.png" alt="Filters" style="width:100%">
+</div>
 
 <br><br>
+
+<h3 style="text-align:center;">Video</h3>
+
+<p>Please excuse my rudimentary video production skills at age 14.  While the video is a bit ridiculous, I think the explanation still stands.</p>
 
 <div class="video-container" align="center">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/6FnHQH8JeSM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
