video top opt page

--- a/major-projects/topological-optimization/index.html
+++ b/major-projects/topological-optimization/index.html
@@ -109,6 +109,10 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 
 <br><br>
 
+<h3 style="text-align:center;">Video</h3>
+
+<p>Please excuse the video production quality.  I was only 15. :)</p>
+
 <div class="video-container" align="center">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/LxGwbtSSbFo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
