different size columns

--- a/minor-projects/billiard-bots/index.html
+++ b/minor-projects/billiard-bots/index.html
@@ -5,12 +5,12 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 ---
 
 <div class="row_grid">
-    <div class="column_grid_title">
+    <div class="column_grid left">
         <div class="content">
             <h3 style="text-align:left">Summary.</h3>
         </div>
     </div>
-    <div class="column_grid_text">
+    <div class="column_grid right">
         <div class="content">
             <p style="text-align:left">I know it seems a bit ridiculous to include a project from when I was 12 years old in this portfolio, but I always thought this project was pretty fun.</p>
             <p style="text-align:left">Basically, my tiny 7th grade self wanted to figure out the science behind trick shots in pool, so I could improve my game (because as a 12-year-old I was obviously very involved in the professional pool circuit).  Conveniently, my dad worked for a robotics company (<a class="active" href="https://en.wikipedia.org/wiki/Omron_Adept" target="_blank">Adept Technology</a>) and brought me home an Adept Cobra i800 4-axis robot.</p>
