--- a/major-projects/cosmic-phylogeny/index.html
+++ b/major-projects/cosmic-phylogeny/index.html
@@ -5,23 +5,23 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 ---
 
 <div class="row_grid">
-    <div class="column_grid">
+    <div class="column_grid left">
         <div class="content">
             <h3 style="text-align:left">Summary.</h3>
         </div>
     </div>
-    <div class="column_grid">
+    <div class="column_grid right">
         <div class="content">
             <p style="text-align:left">I develop pipelines to generate phylogenetic trees and map the chemical evolution of stars in the galaxy based on their elemental makeup.</p>
             <p style="text-align:left">I collaborate with <a href="http://www.paulajofre.com/" target="_blank">Dr. Paula Jofré</a> of the University of Diego Portales in Santiago, Chile.</p>
         </div>
     </div>
-    <div class="column_grid">
+    <div class="column_grid left">
         <div class="content">
             <h3 style="text-align:left">Publications.</h3>
         </div>
     </div>
-    <div class="column_grid">
+    <div class="column_grid right">
         <div class="content">
             <p style="text-align:left;"><a style="font-weight:bold;">Traits for chemical evolution in solar twins</a><br>
             Trends of neutron-capture elements with stellar age<br>
