--- a/minor-projects/sewing-science/index.html
+++ b/minor-projects/sewing-science/index.html
@@ -5,12 +5,12 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 ---
 
 <div class="row_grid">
-    <div class="column_grid">
+    <div class="column_grid left">
         <div class="content">
             <h3 style="text-align:left">Press.</h3>
         </div>
     </div>
-    <div class="column_grid">
+    <div class="column_grid right">
         <div class="content">
             <p style="text-align:left"><a class="active" href="https://www.sciencenews.org/article/sewing-study-stitches-broadcom-prize">Science News</a></p>
             <p style="text-align:left"><a class="active" href="https://www.businessinsider.com/14-year-old-won-25000-broadcom-masters-prize-studying-sewing-2014-11">Business Insider</a></p>
