--- a/major-projects/topological-optimization/index.html
+++ b/major-projects/topological-optimization/index.html
@@ -5,12 +5,12 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 ---
 
 <div class="row_grid">
-    <div class="column_grid">
+    <div class="column_grid left">
         <div class="content">
             <h3 style="text-align:left">Summary.</h3>
         </div>
     </div>
-    <div class="column_grid">
+    <div class="column_grid right">
         <div class="content">
             <p style="text-align:left">Any structure carried into space must be lightweight due to the high cost of space travel.  Structures made from lattice framework are actively studied due to their simple modular assembly and high stiffness-to-mass ratio.  In 2017, I developed genetic algorithm for the rapid mass optimization and automatic generation of bridge structures with programmable stiffness properties build from a simple lattice framework (the <span class="tooltip">cuboct truss<span class="tooltiptext"><img src="/major-projects/topological-optimization/octahedron_solidworks.png" style="width:50%;">The cuboct truss is a support structure formed from repeating octahedral units.</span></span>).  I verified the performance of the bridge structures by physical experiment against a conventionally-designed bridge and a full envelope truss beam.  I performed this research as an intern for the Coded Structures Lab at NASA Ames Research Center under <a class="active" href="https://www.nasa.gov/centers/ames/cct/about/bios/kennycheung" target="_blank">Dr. Kenny Cheung</a>.</p>
         </div>
@@ -27,12 +27,12 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 <br><br>
 
 <div class="row_grid">
-    <div class="column_grid">
+    <div class="column_grid left">
         <div class="content">
             <h3 style="text-align:left">Publications.</h3>
         </div>
     </div>
-    <div class="column_grid">
+    <div class="column_grid right">
         <div class="content">
             <p style="text-align:left;"><a style="font-weight:bold;">Topological Optimization of a Cuboct Truss Structure Using a Genetic Algorithm</a><br>
             Holly Jackson<br>
@@ -94,12 +94,12 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 <br><br>
 
 <div class="row_grid">
-    <div class="column_grid">
+    <div class="column_grid left">
         <div class="content">
             <h3 style="text-align:left">Press.</h3>
         </div>
     </div>
-    <div class="column_grid">
+    <div class="column_grid right">
         <div class="content">
             <p style="text-align:left;">"From Sewing to Bridges: Jackson Turns Her Hobby into an Award-Winning Engineering Pursuit [Women to Watch]", <a class="active" href="https://ieeexplore.ieee.org/document/8354973" target="_blank">IEEE Women in Engineering Magazine</a></p>
             <p style="text-align:left;">"Supersize It!" & "Launching at Ames", <a class="active" href="https://www.nasa.gov/sites/default/files/atoms/files/techbyteswt17_4.pdf" target="_blank">NASA Ames TechBytes Newsletter (Winter 2017)</a></p>
@@ -110,12 +110,12 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 <br><br>
 
 <div class="row_grid">
-    <div class="column_grid">
+    <div class="column_grid left">
         <div class="content">
             <h3 style="text-align:left">Video.</h3>
         </div>
     </div>
-    <div class="column_grid">
+    <div class="column_grid right">
         <div class="content">
             <p style="text-align:left;">Please excuse the video production quality.  I was only 15. &#128540;</p>
         </div>
