--- a/minor-projects/computational-cardiology/index.html
+++ b/minor-projects/computational-cardiology/index.html
@@ -5,12 +5,12 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 ---
 
 <div class="row_grid">
-    <div class="column_grid">
+    <div class="column_grid left">
         <div class="content">
             <h3 style="text-align:left">Summary.</h3>
         </div>
     </div>
-    <div class="column_grid">
+    <div class="column_grid right">
         <div class="content">
             <p style="text-align:left">In my freshman year of high school, I developed an algorithm in <a class="active" href="http://freemat.sourceforge.net/" target="_blank">FreeMat</a> (basically free MATLAB, before I had the luxury of MIT paying for my software) to process stethoscope sounds and accurately detect the presence and type of a patient’s heart murmur.  The project was inspired by my younger sister Kate, who was born with a heart condition (a <span class="tooltip">bicuspid aortic valve<span class="tooltiptext"><img src="/minor-projects/computational-cardiology/bicuspid_aortic_valve.png" style="width:100%;">A congenital heart defect in which the aortic valve only has two leaflets, instead of three.</span></span>) which causes her to have a heart murmur.</p>
             <p style="text-align:left">Simply, the algorithm took the envelope of a pre-recorded heartbeat and isolated the systolic and diastolic sections by finding the local maxima of the filtered envelope.  I diagnosed the heartbeat by convolving each section with simple geometric filters that matched profiles of common murmurs.  I tested the algorithm against seventy-one prerecorded heart sounds from public websites dedicated to ear-training medical professionals.  I identified normal heartbeats with a 100% success rate and murmurs with a 95% success rate. I categorized both systolic and diastolic murmurs with 70% accuracy.</p>
