--- a/minor-projects/image-processing/index.html
+++ b/minor-projects/image-processing/index.html
@@ -6,12 +6,12 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 
 
 <div class="row_grid">
-    <div class="column_grid">
+    <div class="column_grid left">
         <div class="content">
             <h3 style="text-align:left">Summary.</h3>
         </div>
     </div>
-    <div class="column_grid">
+    <div class="column_grid right">
         <div class="content">
             <p style="text-align:left;">In a final project for MIT class 6.115 (Microcomputer Project Lab), I created a simple GUI to perform efficient image processing operations – such as blur, edge detection, and inversion – on images captured on the fly.  My setup includes only three parts: a PSoC 5LP board, a color TFT display with 320x240 pixel resolution, and an Arduino compatible color camera.</p>
             <p style="text-align:left;">Using the potentiometer and a button on the PSoC 5LP, the user can select from six menu options displayed on the TFT screen, including a "live" mode which continuously captures sequential images from the camera (rough every 0.87 seconds) and updates the TFT display until paused by a second button press.  Once she selects an image to process, she can iteratively apply image processing functions until she reaches a desired result.</p>
