small format adjustments

--- a/minor-projects/game-of-life/index.html
+++ b/minor-projects/game-of-life/index.html
@@ -3,3 +3,22 @@ layout: page
 title: "Conway's Game of Life"
 menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a><a href="/about">About</a>
 ---
+
+<div class="row_grid">
+    <div class="column_grid left">
+        <div class="content">
+            <h3 style="text-align:left">Summary.</h3>
+        </div>
+    </div>
+    <div class="column_grid right">
+        <div class="content">
+            <p style="text-align:left;">This is a summary.</p>
+        </div>
+    </div>
+</div>
+
+<br><br>
+
+<div class="content">
+    <img class="slides"  src="/minor-projects/game-of-life/gol.gif" alt="animated" />
+</div>
