add figures to image processing page

--- a/minor-projects/game-of-life/index.html
+++ b/minor-projects/game-of-life/index.html
@@ -12,7 +12,13 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
     </div>
     <div class="column_grid right">
         <div class="content">
-            <p style="text-align:left;">This is a summary.</p>
+            <p style="text-align:left;">Conway’s Game of Life is a cellular automaton that was created by John Conway.  Through creating this game, I learned the basics of making an evolutionary algorithm.</p>
+            <p style="text-align:left;">The game follows the rules below (defined <a class="active" href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life" target="_blank">here</a>):</p>
+            <ul>
+                <li><p style="text-align:left;">Any live cell with two or three live neighbors survives.</p></li>
+                <li><p style="text-align:left;">Any dead cell with three live neighbors becomes a live cell.</p></li>
+                <li><p style="text-align:left;">All other live cells die in the next generation.  Similarly, all other dead cells stay dead.</p></li>
+            </ul>
         </div>
     </div>
 </div>
