--- a/minor-projects/image-processing/index.html
+++ b/minor-projects/image-processing/index.html
@@ -31,16 +31,52 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 
 <br><br>
 
-<h3>Figures</h3>
+<h3 style="text-align:center">Figures</h3>
 
 <div class="content">
-    <img class="slides" src="/minor-projects/image-processing/timing-diagram.png" alt="Algorithm Step 1" style="width:100%">
+    <img class="slides" src="/minor-projects/image-processing/setup.jpg" alt="Setup" style="width:100%">
+    <p style="text-align:left;">Project setup.  From left to right - Arduino camera, PSoC 5LP board, TFT screen.</p>
+</div>
+
+<br>
+
+<div class="content">
+    <img class="slides" src="/minor-projects/image-processing/final_proj_schematic.bmp" alt="Schematic" style="width:100%">
+    <p style="text-align:left;">Project schematic.</p>
+</div>
+
+<br>
+
+<div class="content">
+    <img class="slides" src="/minor-projects/image-processing/creator_schematic.JPG" alt="Top Design Schematic" style="width:100%">
+    <p style="text-align:left;">“Top Design” schematic of SPI interface for TFT screen, ADC for menu selection, and I<sup>2</sup>C component and dual-stage latching system for Arduino camera in PSoC Creator.</p>
+</div>
+
+<br>
+
+<div class="content">
+    <img class="slides" src="/minor-projects/image-processing/timing-diagram.gif" alt="Timing Diagram" style="width:100%">
+    <p style="text-align:left;">Timing diagram for reading from the OV7670 camera to the PSoC using dual-stage pixel latching system.</p>
+</div>
+
+<br>
+
+<div class="content">
+    <img class="slides" src="/minor-projects/image-processing/peppers.jpg" alt="Sample" style="width:100%">
+    <p style="text-align:left;">Sample peppers image – original, gradient, blur, invert (each applied individually, image reset before each operation).</p>
+</div>
+
+<br>
+
+<div class="content">
+    <img class="slides" src="/minor-projects/image-processing/example.JPG" alt="Example" style="width:100%">
+    <p style="text-align:left;">Me in my bomber shirt – original, gradient, inverted (applied sequentially).</p>
 </div>
 
 
 <br><br>
 
-<h3>Demos</h3>
+<h3 style="text-align:center">Demo Videos</h3>
 
 <div class="video-container" align="center">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/mPehnXVb3rM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
