fix timing diagram

--- a/minor-projects/image-processing/index.html
+++ b/minor-projects/image-processing/index.html
@@ -55,7 +55,7 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 <br>
 
 <div class="content">
-    <img class="slides" src="/minor-projects/image-processing/timing-diagram.gif" alt="Timing Diagram" style="width:100%" />
+    <img class="slides" src="/minor-projects/image-processing/timing-diagram.png" alt="Timing Diagram" style="width:100%">
     <p style="text-align:left;">Timing diagram for reading from the OV7670 camera to the PSoC using dual-stage pixel latching system.</p>
 </div>
 
