--- a/major-projects/topological-optimization/index.html
+++ b/major-projects/topological-optimization/index.html
@@ -37,7 +37,7 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
             <p style="text-align:left;"><a style="font-weight:bold;">Topological Optimization of a Cuboct Truss Structure Using a Genetic Algorithm</a><br>
             Holly Jackson<br>
             <a style="font-style:italic;">58th AIAA/ASCE/AHS/ASC Structures, Structural, Dynamics and Materials Conference, AIAA SciTech Forum and Exposition</a><br>
-            <a href="/major-projects/topological-optimization/HMJ_AIAA_2017.pdf">Conference Paper</a></p>
+            <a href="/major-projects/topological-optimization/HMJ_AIAA_2017.pdf" target="_blank">Conference Paper</a></p>
         </div>
     </div>
 </div>
