--- a/minor-projects/billiard-bots/index.html
+++ b/minor-projects/billiard-bots/index.html
@@ -24,34 +24,34 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 <br><br>
 
 <div class="content">
-    <img class="slides" src="/minor-projects/billiard-bots/images/throw2.png" alt="Stress Testing" style="width:100%">
+    <img class="slides" src="/minor-projects/billiard-bots/images/throw2.png" alt="Throw" style="width:100%">
     <p style="text-align:left;">The effects of cut-induced throw, spin-induced throw, and a combination of both (total-induced throw).</p>
 </div>
 
 <br><br>
 
 <div class="content">
-    <img class="slides" src="/minor-projects/billiard-bots/images/setup1.png" alt="Stress Testing" style="width:100%">
+    <img class="slides" src="/minor-projects/billiard-bots/images/setup1.png" alt="Setup 1" style="width:100%">
     <p style="text-align:left;">Setup.  I used a wooden fixture to properly position the cue and object balls.  In half of the tests, I placed a rubber band around the cue ball to create more friction.</p>
 </div>
 
 <br><br>
 
 <div class="content">
-    <img class="slides" src="/minor-projects/billiard-bots/images/setup2.png" alt="Stress Testing" style="width:100%">
+    <img class="slides" src="/minor-projects/billiard-bots/images/setup2.png" alt="Setup 2" style="width:100%">
     <p style="text-align:left;">Small child (me) collecting data on final position of object ball.</p>
 </div>
 
 <br><br>
 
 <div class="content">
-    <img class="slides" src="/minor-projects/billiard-bots/images/cut.png" alt="Stress Testing" style="width:100%">
+    <img class="slides" src="/minor-projects/billiard-bots/images/cut.png" alt="CIT" style="width:100%">
     <p style="text-align:left;">A prediction of the effect of 7&#176; cut angle.</p>
 </div>
 
 <br><br>
 
 <div class="content">
-    <img class="slides" src="/minor-projects/billiard-bots/images/robot_code.JPG" alt="Stress Testing" style="width:100%">
+    <img class="slides" src="/minor-projects/billiard-bots/images/robot_code.JPG" alt="Robot Code" style="width:100%">
     <p style="text-align:left;">Simple code driving the robot to strike the object ball with the cue ball.</p>
 </div>
