--- a/about/index.html
+++ b/about/index.html
@@ -10,5 +10,5 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 
 <div class="about_container">
     <p>I’m a junior at MIT, pursuing a Bachelor’s in electrical engineering and computer science.</p>
-    <p>You can check out my resume <a class="active" href="/about/hmj_resume.pdf">here</a>.</p>
+    <p>You can check out my resume <a class="active" href="/about/hmj_resume.pdf" target="_blank">here</a>.</p>
 </div>
