format adjustments, sewing science page

--- a/minor-projects/sewing-science/index.html
+++ b/minor-projects/sewing-science/index.html
@@ -12,7 +12,7 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
     </div>
     <div class="column_grid right">
         <div class="content">
-            <p style="text-align:left">Since a young age, I have loved to sew.  So, at age 14, I decided to test what stitch type made the strongest seam.  Spoiler: the straight stitch always came out on top, which supports in use in high-stress devices such as parachutes, seatbelts, and automobile airbags.  You can check out my project report <a class="active" href="/minor-projects/sewing-science/sewing-science-report.pdf" target="_blank">here</a>.</p>
+            <p style="text-align:left">Since a young age, I have loved to sew.  So, at age 14, I decided to test what stitch type made the strongest seam.  Spoiler: the straight stitch always came out on top, which supports its use in high-stress devices such as parachutes, seatbelts, and automobile airbags.  You can check out my project report <a class="active" href="/minor-projects/sewing-science/sewing-science-report.pdf" target="_blank">here</a>.</p>
         </div>
     </div>
 </div>
@@ -21,18 +21,17 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 
 <div class="content">
     <a href="https://www.sciencenewsforstudents.org/blog/eureka-lab/science-strongest-stitch" target="_blank"><img class="slides" src="/minor-projects/sewing-science/860-Holly-Jackson-Broadcom.jpg" alt="Setup" style="width:100%"></a>
-    <p style="text-align:left;">Project setup.  From left to right - Arduino camera, PSoC 5LP board, TFT screen.</p>
 </div>
 
 <br><br>
 
 <div class="row_grid">
-    <div class="column_grid left">
+    <div class="column_grid">
         <div class="content">
             <h3 style="text-align:left">Press.</h3>
         </div>
     </div>
-    <div class="column_grid right">
+    <div class="column_grid">
         <div class="content">
             <p style="text-align:left"><a class="active" href="https://www.sciencenews.org/article/sewing-study-stitches-broadcom-prize" target="_blank">Science News</a></p>
             <p style="text-align:left"><a class="active" href="https://www.businessinsider.com/14-year-old-won-25000-broadcom-masters-prize-studying-sewing-2014-11" target="_blank">Business Insider</a></p>
