changed footer settings, added social links

--- a/about/index.html
+++ b/about/index.html
@@ -12,3 +12,10 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
     <p>I’m a junior at MIT, pursuing a Bachelor’s in electrical engineering and computer science.</p>
     <p>You can check out my resume <a class="active" href="/about/hmj_resume.pdf" target="_blank">here</a>.</p>
 </div>
+
+<br><br>
+
+<div class="container">
+    <a href="mailto:hjackson@mit.edu"><img style="text-align:center;height:50px" src="/images/email.png" alt="email"></a>
+    <a href="https://github.com/hollyjackson"><img style="text-align:center;height:50px" src="/images/github_icon.png" alt="email"></a>
+</div>
