--- a/minor-projects/game-of-life/index.html
+++ b/minor-projects/game-of-life/index.html
@@ -2,6 +2,7 @@
 layout: page
 title: "Conway's Game of Life"
 menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a><a href="/about">About</a>
+footer: <a href="mailto:hjackson@mit.edu">hjackson@mit.edu</a>
 ---
 
 <div class="row_grid">
@@ -12,13 +13,14 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
     </div>
     <div class="column_grid right">
         <div class="content">
-            <p style="text-align:left;">Conway’s Game of Life is a cellular automaton that was created by John Conway.  Through creating this game, I learned the basics of making an evolutionary algorithm.</p>
+            <p style="text-align:left;">In 2016, I programmed a simple version of Conway's Game of Life, to learn the basics of making an evolutionary algorithm.  Conway's Game of Life is a cellular automaton that was created by John Conway.</p>
             <p style="text-align:left;">The game follows the rules below (defined <a class="active" href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life" target="_blank">here</a>):</p>
             <ul>
                 <li><p style="text-align:left;">Any live cell with two or three live neighbors survives.</p></li>
                 <li><p style="text-align:left;">Any dead cell with three live neighbors becomes a live cell.</p></li>
                 <li><p style="text-align:left;">All other live cells die in the next generation.  Similarly, all other dead cells stay dead.</p></li>
             </ul>
+            <p style="text-align:left;">Check out my code on <a class="active" href="https://github.com/hollyjackson/GameOfLife" target="_blank">Github</a>.</p>
         </div>
     </div>
 </div>
