--- a/minor-projects/index.html
+++ b/minor-projects/index.html
@@ -2,6 +2,7 @@
 layout: page
 title: "Minor Projects"
 menu: <a href="/">Major Projects</a><a class="active" href="/minor-projects">Minor Projects</a><a href="/about">About</a>
+footer: <a href="mailto:hjackson@mit.edu">hjackson@mit.edu</a>
 ---
 
 <div class="row_grid">
