--- a/minor-projects/numerical-modeling/index.html
+++ b/minor-projects/numerical-modeling/index.html
@@ -2,4 +2,5 @@
 layout: page
 title: "Numerical Modeling and Simulation"
 menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a><a href="/about">About</a>
+footer: <a href="mailto:hjackson@mit.edu">hjackson@mit.edu</a>
 ---
