--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: page
 title: "Major Projects"
 menu: <a class="active" href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a><a href="/about">About</a>
+footer: <a href="mailto:hjackson@mit.edu">hjackson@mit.edu</a>
 ---
 
 <!-- Portfolio Gallery Grid -->
