--- a/major-projects/cosmic-phylogeny/index.html
+++ b/major-projects/cosmic-phylogeny/index.html
@@ -2,6 +2,7 @@
 layout: page
 title: "Cosmic Phylogeny"
 menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a><a href="/about">About</a>
+footer: <a href="mailto:hjackson@mit.edu">hjackson@mit.edu</a>
 ---
 
 <div class="row_grid">
