fix social links

--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,11 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 
 <br><br>
 
-<div class="container">
-    <a href="mailto:hjackson@mit.edu"><img style="text-align:center;height:50px" src="/images/email.png" alt="email"></a>
-    <a href="https://github.com/hollyjackson"><img style="text-align:center;height:50px" src="/images/github_icon.png" alt="email"></a>
+<div class="row_grid">
+    <div class="column_grid" style="text-align:right;">
+        <a href="mailto:hjackson@mit.edu"><img style="text-align:center;height:50px;width:auto;" src="/images/email.png" alt="email"></a>
+    </div>
+    <div class="column_grid" style="text-align:left;">
+        <a href="https://github.com/hollyjackson"><img style="text-align:center;height:50px;width:auto;" src="/images/github_icon.png" alt="email"></a>
+    </div>
 </div>
