format social links

--- a/about/index.html
+++ b/about/index.html
@@ -15,11 +15,11 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 
 <br><br>
 
-<div class="row_grid">
-    <div class="column_grid" style="text-align:right;">
+<div class="row_icon">
+    <div class="column_icon" style="text-align:right;">
         <a href="mailto:hjackson@mit.edu"><img style="text-align:center;height:50px;width:auto;" src="/images/email.png" alt="email"></a>
     </div>
-    <div class="column_grid" style="text-align:left;">
+    <div class="column_icon" style="text-align:left;">
         <a href="https://github.com/hollyjackson"><img style="text-align:center;height:50px;width:auto;" src="/images/github_icon.png" alt="email"></a>
     </div>
 </div>
