--- a/about/index.html
+++ b/about/index.html
@@ -16,10 +16,10 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 <br><br>
 
 <div class="row_icon">
-    <div class="column_icon">
+    <div class="column_icon" style="text-align:right;">
         <a href="mailto:hjackson@mit.edu"><img style="height:50px;width:auto;" src="/images/email.png" alt="email"></a>
     </div>
-    <div class="column_icon">
+    <div class="column_icon" style="text-align:left;">
         <a href="https://github.com/hollyjackson"><img style="height:50px;width:auto;" src="/images/github_icon.png" alt="email"></a>
     </div>
 </div>
