--- a/minor-projects/numerical-modeling/index.html
+++ b/minor-projects/numerical-modeling/index.html
@@ -1,6 +1,35 @@
 ---
 layout: page
-title: "Numerical Modeling and Simulation"
+title: "Carotid Artery Pressure Estimation"
 menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a><a href="/about">About</a>
 footer: <a href="mailto:hjackson@mit.edu">hjackson@mit.edu</a>
 ---
+
+<div class="row_grid">
+    <div class="column_grid left">
+        <div class="content">
+            <h3 style="text-align:left">Summary.</h3>
+        </div>
+    </div>
+    <div class="column_grid right">
+        <div class="content">
+            <p style="text-align:left;">In Fall 2019, I took MIT graduate class 6.336 (<a class="active" href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-336j-introduction-to-numerical-simulation-sma-5211-fall-2003/" target="_blank">Introduction to Numerical Modeling and Simulation</a>) taught by <a class="active" href="http://www.mit.edu/~dluca/" target="_blank">Dr. Luca Daniel</a>.  For the final project, with classmates Elizabeth Healey and Alex Jaffe, we developed a numerical model to estimate the blood pressure of the carotid artery from force-coupled ultrasound (FCU) data.  We employed a 1-D forward finite difference to predict the tissue, vessel wall, and lumen displacements under the known force applied to the surface of the skin by the ultrasound probe.  We nested this forward model into an iterative inverse model where we optimized the surrounding tissue and carotid wall stiffness and lumen pressure parameters to minimize the difference between predicted and observed displacements.  The final output of our model a sampled carotid lumen pressure wave.  We validated the systolic and diastolic pressure values of this wave with readings from an oscillometric blood pressure cuff.</p>
+        </div>
+    </div>
+</div>
+
+<br><br>
+
+<h3 style="text-align:center">Figures</h3>
+
+<div class="content">
+    <img class="slides" src="/minor-projects/numerical-modeling/pm4_proposal_ckt_model_v3.png" alt="Setup" style="width:100%">
+    <p style="text-align:left;">Our system model overlaid on long-axis carotid image.</p>
+</div>
+
+<br>
+
+<div class="content">
+    <img class="slides" src="/minor-projects/numerical-modeling/forward_model_force_ramp_25.png" alt="Setup" style="width:100%">
+    <p style="text-align:left;">Predicted tissue (blue), vessel wall (green), and lumen (red) positions for a 1-D strip.  Displacements predicted at increasing external pressures using forward finite difference model using estimated values for tissue, vesselwall, and lumen parameters.</p>
+</div>
