--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@ title: About
 menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a><a class="active" href="/about">About</a>
 ---
 
-<img src="/images/headshot.jpg" alt="Holly Jackson">
+<img class="resizeable" src="/images/headshot.jpg" alt="Holly Jackson">
 
 <br><br>
 
