fixing email links, added new email icon

--- a/minor-projects/game-of-life/index.html
+++ b/minor-projects/game-of-life/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: "Conway's Game of Life"
 menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a><a href="/about">About</a>
-footer: <a href="mailto:hjackson@mit.edu">hjackson@mit.edu</a>
+footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
 ---
 
 <div class="row_grid">
