--- a/major-projects/implicit-curves/index.html
+++ b/major-projects/implicit-curves/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: "Implicit Curves"
 menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a><a href="/about">About</a>
-footer: <a href="mailto:hjackson@mit.edu">hjackson@mit.edu</a>
+footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
 ---
 
 <p>coming soon...</p>
