--- a/minor-projects/robotic-locomotion/index.html
+++ b/minor-projects/robotic-locomotion/index.html
@@ -2,5 +2,5 @@
 layout: page
 title: "Robotic Locomotion"
 menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a><a href="/about">About</a>
-footer: <a href="mailto:hjackson@mit.edu">hjackson@mit.edu</a>
+footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
 ---
