added linkedin link, formatting changes on resume

--- a/about/index.html
+++ b/about/index.html
@@ -18,4 +18,5 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
 <div class="socialContainer">
     <a href="mailto:hjackson@mit.edu" target="_blank"><img class="social" src="/images/email.png"></a>
     <a href="https://github.com/hollyjackson" target="_blank"><img class="social" src="/images/github_icon.png"></a>
+    <a href="https://www.linkedin.com/in/holly-jackson-481005199/" target="_blank"><img class="social" src="/images/linkedin_icon.png"></a>
 </div>
