minor project icons

--- a/major-projects/topological-optimization/index.html
+++ b/major-projects/topological-optimization/index.html
@@ -118,7 +118,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
     </div>
     <div class="column_grid right">
         <div class="content">
-            <p style="text-align:left;">Please excuse the video production quality.  I was only 15. &#128540;</p>
+            <p style="text-align:left;">Please excuse the video production quality; I was only 15.</p>
         </div>
     </div>
 </div>
