--- a/minor-projects/index.html
+++ b/minor-projects/index.html
@@ -10,7 +10,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
         <div class="content">
             <div class="img-hover-zoom">
                 <a href="/minor-projects/image-processing">
-                    <img src="/images/image_processing.png" alt="Image Processing" style="width:100%">
+                    <img src="/images/schematic.png" alt="Image Processing" style="width:100%">
                 </a>
             </div>
             <h2>Image Processing with a Microcontroller (Age 19)</h2>
@@ -20,7 +20,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
         <div class="content">
             <div class="img-hover-zoom">
                 <a href="/minor-projects/numerical-modeling">
-                    <img src="/images/numerical-modeling.jpg" alt="Numerical Modeling" style="width:100%">
+                    <img src="/images/6336.png" alt="Numerical Modeling" style="width:100%">
                 </a>
             </div>
             <h2>Carotid Artery Pressure Estimation (Age 19)</h2>
@@ -40,7 +40,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
         <div class="content">
             <div class="img-hover-zoom">
                 <a href="/minor-projects/game-of-life">
-                    <img src="/images/game-of-life.JPG" alt="Game of Life" style="width:100%">
+                    <img src="/images/gol.png" alt="Game of Life" style="width:100%">
                 </a>
             </div>
             <h2>Conway's Game of Life (Age 15)</h2>
@@ -50,7 +50,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
         <div class="content">
             <div class="img-hover-zoom">
                 <a href="/minor-projects/computational-cardiology">
-                    <img src="/images/computational-cardiology.JPG" alt="Computational Cardiology" style="width:100%">
+                    <img src="/images/comp_cardiology.png" alt="Computational Cardiology" style="width:100%">
                 </a>
             </div>
             <h2>Computational Cardiology (Age 14)</h2>
@@ -60,7 +60,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
         <div class="content">
             <div class="img-hover-zoom">
                 <a href="/minor-projects/sewing-science">
-                    <img src="/images/sewing-science.JPG" alt="Sewing Science" style="width:100%">
+                    <img src="/images/stitches.png" alt="Sewing Science" style="width:100%">
                 </a>
             </div>
             <h2>Sewing Science (Age 13)</h2>
@@ -70,7 +70,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
         <div class="content">
             <div class="img-hover-zoom">
                 <a href="/minor-projects/billiard-bots">
-                    <img src="/images/billiard-bots.JPG" alt="Billiard Bots" style="width:100%">
+                    <img src="/images/billiard_bots.png" alt="Billiard Bots" style="width:100%">
                 </a>
             </div>
             <h2>Billiard Bots (Age 12)</h2>
