--- a/minor-projects/index.html
+++ b/minor-projects/index.html
@@ -30,7 +30,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
         <div class="content">
             <div class="img-hover-zoom">
                 <a href="/minor-projects/robotic-locomotion">
-                    <img src="/images/robotic-locomotion.JPG" alt="Robotic Locomotion" style="width:100%">
+                    <img src="/images/temp.png" alt="Robotic Locomotion" style="width:100%">
                 </a>
             </div>
             <h2>Robotic Locomotion (Age 17)</h2>
@@ -50,7 +50,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
         <div class="content">
             <div class="img-hover-zoom">
                 <a href="/minor-projects/computational-cardiology">
-                    <img src="/images/comp_cardiology.png" alt="Computational Cardiology" style="width:100%">
+                    <img src="/images/temp.png" alt="Computational Cardiology" style="width:100%">
                 </a>
             </div>
             <h2>Computational Cardiology (Age 14)</h2>
@@ -70,7 +70,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
         <div class="content">
             <div class="img-hover-zoom">
                 <a href="/minor-projects/billiard-bots">
-                    <img src="/images/billiard_bots.png" alt="Billiard Bots" style="width:100%">
+                    <img src="/images/temp.png" alt="Billiard Bots" style="width:100%">
                 </a>
             </div>
             <h2>Billiard Bots (Age 12)</h2>
