--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,7 @@ menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a>
     <p>I’m a junior at MIT, pursuing a Bachelor’s in electrical engineering and computer science.</p>
     <p>You can check out my resume <a class="active" href="/about/hmj_resume.pdf" target="_blank">here</a>.</p>
     <br>
-    <p style="font-weight:bold;"><a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a></p>
+    <p style="font-weight:bold;"><a class="inactive" href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a></p>
 </div>
 
 <br><br>
