--- a/minor-projects/index.html
+++ b/minor-projects/index.html
@@ -70,7 +70,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
         <div class="content">
             <div class="img-hover-zoom">
                 <a href="/minor-projects/billiard-bots">
-                    <img src="/images/temp.png" alt="Billiard Bots" style="width:100%">
+                    <img src="/images/cut.png" alt="Billiard Bots" style="width:100%">
                 </a>
             </div>
             <h2>Billiard Bots (Age 12)</h2>
