fix paper links

--- a/major-projects/unlocking-history/index.html
+++ b/major-projects/unlocking-history/index.html
@@ -4,3 +4,5 @@ title: "Unlocking History"
 menu: <a href="/">Major Projects</a><a href="/minor-projects">Minor Projects</a><a href="/about">About</a>
 footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
 ---
+
+<p>coming soon...</p>
