--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
     <!--<div class="column_grid">
         <div class="content">
             <div class="img-hover-zoom">
-                <a href="/major-projects/implicit-curves">
+                <a href="/implicit-curves">
                     <img src="/images/bezier_curve.png" alt="Implicit Curves" style="width:100%">
                 </a>
             </div>
@@ -20,7 +20,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
     <div class="column_grid">
         <div class="content">
             <div class="img-hover-zoom">
-                <a href="/major-projects/cosmic-phylogeny">
+                <a href="/cosmic-phylogeny">
                     <img src="/images/las_campanas.jpg" alt="Cosmic Phylogeny" style="width:100%">
                 </a>
             </div>
@@ -30,7 +30,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
     <div class="column_grid">
         <div class="content">
             <div class="img-hover-zoom">
-                <a href="/major-projects/unlocking-history">
+                <a href="/unlocking-history">
                     <img src="/images/brienne_letter.JPG" alt="Unlocking History" style="width:100%">
                 </a>
             </div>
@@ -40,7 +40,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
     <div class="column_grid">
         <div class="content">
             <div class="img-hover-zoom">
-                <a href="/major-projects/topological-optimization">
+                <a href="/topological-optimization">
                     <img src="/images/sla_bridge.JPG" alt="Topological Optimization" style="width:100%">
                 </a>
             </div>
