--- a/minor-projects/index.html
+++ b/minor-projects/index.html
@@ -50,7 +50,7 @@ footer: <a href="mailto:hjackson@mit.edu" target="_blank">hjackson@mit.edu</a>
         <div class="content">
             <div class="img-hover-zoom">
                 <a href="/minor-projects/computational-cardiology">
-                    <img src="/images/temp.png" alt="Computational Cardiology" style="width:100%">
+                    <img src="/images/comp_cardiology.png" alt="Computational Cardiology" style="width:100%">
                 </a>
             </div>
             <h2>Computational Cardiology (Age 14)</h2>
